sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:8: error: not found: value a
      a = getValeur(i)
      ^AlgBubbleSort1:9: error: not found: value b
      b = getValeur(i+1)
      ^AlgBubbleSort1:10: error: not found: value a
      if (a >= b) {
          ^AlgBubbleSort1:10: error: not found: value b
      if (a >= b) {
               ^