sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  val dim : Int = getNombreValeurs()
  var echangeFait : Boolean = true
  while (echangeFait) {
    echangeFait = false
    for (i <- 0 to (dim - 2)) {
      a = getValeur(i)
      b = getValeur(i+1)
      if (a >= b) {
        echange(i, i + 1)
        echangeFait = true
      }
    }
  }
}